# financial-report-generator

./: .env.example  .gitignore  AGENTS.md  Ads.txt  CLAUDE.md  Dockerfile  Makefile  pyproject.toml  railway.toml
.agents/skills/add-metric/: SKILL.md
.agents/skills/build-feature/: SKILL.md
.claude/agents/: api-agent.md  data-agent.md  frontend-agent.md  metrics-agent.md  qa-agent.md
.claude/skills/add-metric/: skill.md
.claude/skills/build-feature/: skill.md
.claude/skills/build-feature/references/: layer-patterns.md
.codex/agents/: api-agent.toml  data-agent.toml  frontend-agent.toml  metrics-agent.toml  qa-agent.toml
backend/: config.py
backend/api/: main.py  pdf_routes.py  routes.py  schemas.py
backend/data/: cache.py  dart_client.py  yfinance_client.py
backend/llm/: claude_client.py  prompts.py
backend/metrics/: calculator.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/scripts/: prerender.mjs
frontend/src/: App.jsx  PrerenderApp.jsx  api.js  main.jsx  seoMeta.js
frontend/src/components/: AnalysisPanel.jsx  MetricsDashboard.jsx  NavBar.jsx  PriceChart.jsx  SearchPanel.jsx
frontend/src/data/: companyCasesData.js  metricsGuideData.js  sectorGuideData.js
frontend/src/pages/: AboutPage.jsx  ContactPage.jsx  PrivacyPolicyPage.jsx  ResultsPage.jsx  SearchPage.jsx
frontend/src/pages/company-cases/: CompanyCaseDetailPage.jsx  CompanyCasesIndexPage.jsx
pdf/: generator.py
pdf/templates/: report.html
tests/: test_dart_client.py  test_metrics.py  test_yfinance_client.py
(+4 files in other folders)
