[project]
name = "financial-report-generator"
version = "0.1.0"
description = "기업 재무제표 자동 분석 리포트 생성기"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "anthropic>=0.40.0",
    "yfinance>=0.2.50",
    "weasyprint>=63.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]
